Travel::Status::DE::URA 1.00 - Sat Oct 31 2015

    * Reduce memory footprint
    * aseag-m: -of: Show delimiter between route before and after the
      requseted stop
    * aseag-m: Do not erroneously reverse stop list when combining -oa and -ob

Travel::Status::DE::URA 0.05 - Mon Oct 12 2015

    * aseag-m: Rename -a / -b / -f / -r to -oa / -ob / -of / -oT
    * aseag-m: New option -or (show partial route)
    * URA->new: Rename full_routes option to calculate_routes. The before/after
      parameters are no longer supported, instead any true parameter causes
      all routes to be calculated
    * URA::Result: Remove route_timetable accessor. Use route_pre / route_post
      instead
    * Ura::Result: Add route_pre, route_post and route_interesting accessors
    * new module: Travel::Status::DE::URA::Stop (describes a stop as a part
      of a departure's route)

Travel::Status::DE::URA 0.04 - Thu Mar 12 2015

    * New dependency: Text::CSV
    * Fix ASEAG parser (was fragile and broken by changes in the backend output)
    * TRavel::Status::DE::URA::Result: Add ->type accessor for compatibility
      with other TRavel::Status modules (always returns "Bus" at the moment)
    * Encoding is hard - it may be broken if your LWP::UserAgent or perl is
      too old

Travel::Status::DE::URA 0.03 - Thu Jan 23 2014

    * Result: Relative times (countdown, countdown_sec) are now computed
      relative to the creation of their Travel::Status::DE::URA object. They
      used to be relative to the call of the "results" function.
    * Result: Fix countdown_sec accessor
    * Result: Do DateTime math on demand, not when
      creating the object. Halves the average runtime, though this depends
      on the amount of results used by the application (the more results
      are used, the less notable the performance gain will be)

Travel::Status::DE::URA 0.02 - Thu Dec 26 2013

    * aseag-m: Fix spaces in stop names (they didn't match anything)